# gtest01

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  math.cpp  math.hpp  square.cpp  square.hpp
tests/: CMakeLists.txt
tests/DivTest/: CMakeLists.txt  div_test.cpp
tests/SquareTest/: CMakeLists.txt  square_test.cpp
